--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -20,6 +20,7 @@
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "connect-history-api-fallback": "^1.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
